fix(parser): consider annotations from both fields and accessors (#862)
* fix(parser): consider annotations from both fields and accessors

Fixes #830
Fixes #806

* test(parser-jvm-core): update JacksonPropertyModelTests

* chore(parser-jvm-core): format code

* fix(parser-jvm-plugin-backbone):type variable signature comparison

* chore(parser): use explicit list collectors

* test(parser-jvm-core): rename shared test class

* fix(parser-jvm-core): missing import